Use __attribute__((unused)) only with gcc 4 and later

See discussion at:
https://bugzilla.gnome.org/show_bug.cgi?id=610183